fixed the loader flickering problem
added a body nested div with class page. Modified also the css.

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -52,6 +52,12 @@ body {
     }
 }
 
+
+.page {
+    width: 100%;
+    height: 100%;
+}
+
 .phone {
     width: 100%;
     height: 100%;
