--- a/sass/partials/_phones.scss
+++ b/sass/partials/_phones.scss
@@ -1,4 +1,4 @@
-body.nexus6 {
+.page.nexus6 {
   
   .phone {background-image: url("../images/dist/nexus6.png");background-size:auto 799px}
   
@@ -15,7 +15,7 @@ body.nexus6 {
 } 
 }
 
-body.s6 {
+.page.s6 {
   
   .phone {background-image: url("../images/dist/s6.png");}
   
@@ -32,7 +32,7 @@ body.s6 {
   } 
 }
 
-body.nexus5 {
+.page.nexus5 {
   .wa-container .user-bar .user-name {width: 163px;}
   .phone {background-image: url("../images/dist/nexus5.png");background-size:auto 772px;}
   
@@ -45,7 +45,7 @@ body.nexus5 {
   }
 }
 
-body.motoX {
+.page.motoX {
   
   .phone {background-image: url("../images/dist/motox.png");}
   
